@@ -74,7 +74,7 @@ sub request {
             $response_line = 1;
         }
         elsif (/^([a-zA-Z0-9_\-]+)\s*:\s*(.*?)$eol/o) {
-            $res->{headers}->{$1} = $2;
+            $res->{headers}->{lc $1} = $2;
         }
         elsif (/^$eol$/o) {
             $header_term = 1;
@@ -114,7 +114,7 @@ package Apache::TestClientResponse;
 
 sub header {
     my($self, $key) = @_;
-    $self->{headers}->{$key};
+    $self->{headers}->{lc $key};
 }
 
 my @headers = qw(Last-Modified Content-Type);
@@ -122,7 +122,7 @@ my @headers = qw(Last-Modified Content-Type);
 for my $header (@headers) {
     no strict 'refs';
     (my $method = lc $header) =~ s/-/_/g;
-    *$method = sub { shift->{headers}->{$header} };
+    *$method = sub { shift->{headers}->{lc $header} };
 }
 
 sub is_success {
